--- a/src/pages/Page.css
+++ b/src/pages/Page.css
@@ -3,7 +3,7 @@ ion-content ion-toolbar {
 }
 
 .new-background-color{
-  --background:#ff914d;
+  --background:#ffffff;
   text-align: center;
   padding-left: 2em;
   padding-right: 0.5em;
