--- a/src/pages/Page.css
+++ b/src/pages/Page.css
@@ -11,7 +11,7 @@ ion-content ion-toolbar {
 }
 
 .principal{
-  --background:#4dbbff ;
+  --background:#ffffff ;
   
 }
 
@@ -37,7 +37,55 @@ ion-tab-bar{
 
 
 }
+.box{
+  border-color: transparent;
+  width: 100%;
+  height: 100px;
+
+  
+
+}
+.linha{
+  width: 3px;
+  height: 53px;
+  border: 2px solid #4dbbff;
+  margin-left: 100px;
+  margin-right: 30px;
+  margin-bottom: 5px;
+}
+.centralizar{
+  margin-bottom: 10px;
+  text-align: left;
+  top: 17px;
+  font-size: 16px;
+  line-height: 19px;
+  font-style: normal;
+  font-weight: normal;
+  --color: #6C6D6D;
+
+ 
+}
 
 .rodape{
   text-align: center;
+
+}
+
+.ioncard{
+  height: 65% ;
+}
+
+.check{
+  --background: transparent;
+  border-width: 1px !important;
+  border-style: solid !important;
+  border-radius: 50%;
+  border-color: grey !important;
+  --height: 35px;
+  --width: 35px;
+  --checkmark-color: #4870f2;
+  --background-checked: transparent;
+  --border-color: transparent;
+  --border-color-checked: transparent;
+  --size: 20px;
 }
