--- a/src/pages/Page.css
+++ b/src/pages/Page.css
@@ -40,28 +40,36 @@ ion-tab-bar{
 .box{
   border-color: transparent;
   width: 100%;
-  height: 100px;
+  height: 150px;
 
   
 
 }
 .linha{
-  width: 3px;
-  height: 53px;
-  border: 2px solid #4dbbff;
-  margin-left: 100px;
-  margin-right: 30px;
+  width: 1px;
+  height: 90%;
+  border: 1px solid #4dbbff;
+  margin-bottom: 10px;
+
+}
+
+.linha2{
+  width: 1px;
+  height: 60px;
+  border: 1px solid #4dbbff;
   margin-bottom: 5px;
+
 }
 .centralizar{
   margin-bottom: 10px;
   text-align: left;
   top: 17px;
-  font-size: 16px;
+  font-size: 20px;
   line-height: 19px;
   font-style: normal;
   font-weight: normal;
   --color: #6C6D6D;
+  position: absolute;
 
  
 }
