--- a/src/pages/EditarPerfil.css
+++ b/src/pages/EditarPerfil.css
@@ -1,43 +1,48 @@
-ion-content ion-toolbar {
-  --background: translucent;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+
+
+.toolbar {
+    background-color: white;
 }
 
-.new-background-color{
-  --background:#ff914d;
-  text-align: center;
-  padding-left: 2em;
-  padding-right: 0.5em;
-
+/* parte de foto e nome*/
+.perfil {
+  /*margin-top: 8%;*/
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.imagemPerfil{
+  width: 56%;
+  height: 56%;
 }
 
-.principal{
-  --background:#4dbbff ;
+.edit-text {
+  font-weight: 500;
+  color: #6c6d6d
 }
 
-
-/* ion-tab-bar{
-  display:flex;
-
+/* parte das caixas de texto*/
+.alinhamento-conteudo {
+  margin-top: 10%;
+  display: flex;
+  flex-direction: column;
+  padding-right: 5%;
+  padding-left: 5%;
 }
 
-.login{
-  border: 3px solid #f1f1f1;
-  width: 350px;
-  height: 665px;
-  position: absolute;
-  border-radius: 0.9em;
-  left: 7%;
-  top:3%;
-  --background: transparent;
-  background-image: #000000;
-  margin-left: -100px;
-  margin-top: -100px;
-  font-size: 2em;
-
-
+/*botão de salvar*/
+.save-bt{
+  margin-top: 9%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-.rodape{
-  text-align: center;
+.btnSave{
+  width: 56%;
+  height: 50px;
+  box-shadow: 0px 2px 4px #6c6d6d;
+  vertical-align: middle;
+  font-size: 20px;
 }
-*/
