--- a/src/pages/Page.css
+++ b/src/pages/Page.css
@@ -40,16 +40,17 @@ ion-tab-bar{
 .box{
   border-color: transparent;
   width: 100%;
-  height: 150px;
+  height: 180px;
 
   
 
 }
 .linha{
   width: 1px;
-  height: 90%;
+  height: 70%;
   border: 1px solid #4dbbff;
-  margin-bottom: 10px;
+  --background: #4dbbff;
+  border-color: #4dbbff;
 
 }
 
@@ -58,6 +59,7 @@ ion-tab-bar{
   height: 60px;
   border: 1px solid #4dbbff;
   margin-bottom: 5px;
+  --background: #4dbbff;
 
 }
 .centralizar{
