--- a/src/pages/Page.css
+++ b/src/pages/Page.css
@@ -7,7 +7,6 @@ ion-content ion-toolbar {
   text-align: center;
   padding-left: 2em;
   padding-right: 0.5em;
-
 }
 
 .principal{
@@ -15,91 +14,72 @@ ion-content ion-toolbar {
   
 }
 
-
 ion-tab-bar{
   display:flex;
-
 }
 
-.login{
-  border: 3px solid #f1f1f1;
-  width: 350px;
-  height: 665px;
-  position: absolute;
-  border-radius: 0.9em;
-  left: 7%;
-  top:3%;
-  --background: transparent;
-  background-image: #000000;
-  margin-left: -100px;
-  margin-top: -100px;
-  font-size: 2em;
-
-
-}
-.box{
-  border-color: transparent;
+.box{ 
   width: 100%;
-  height: 180px;
-
-  
-
+  height: 170px;
 }
+
 .linha{
   width: 1px;
-  height: 70%;
+  height: 140px;
   border: 1px solid #4dbbff;
   --background: #4dbbff;
   border-color: #4dbbff;
-
 }
 
 .linha2{
   width: 1px;
   height: 60px;
   border: 1px solid #4dbbff;
-  margin-bottom: 5px;
   --background: #4dbbff;
-
 }
+
 .centralizar{
   margin-bottom: 10px;
   text-align: left;
-  top: 30px;
+  top: 1px;
   font-size: 20px;
   line-height: 19px;
   font-style: normal;
   font-weight: normal;
   --color: #6C6D6D;
   position: absolute;
-  
+}
 
- 
+.centralizar2{
+  top:25px;
+  font-size: 20px;
+  line-height: 19px;
+  font-style: normal;
+  font-weight: normal;
+  --color: #6C6D6D;
+  position: absolute;
+  text-align: left;
 }
 
 .rodape{
   text-align: center;
-
 }
 
 .ioncard{
-  height: 65% ;
+  height: 63% ;
+  margin-left: 20px;
+  margin-right: 20px;
+  
 }
 
-.check{
-  --background: transparent;
-  border-width: 1px !important;
-  border-style: solid !important;
-  border-radius: 50%;
-  border-color: grey !important;
-  --height: 35px;
-  --width: 35px;
-  --checkmark-color: #4870f2;
-  --background-checked: transparent;
-  --border-color: transparent;
-  --border-color-checked: transparent;
-  --size: 20px;
+.ioncardplantao{
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
+
+
 
 .circulo{
   height: 60px;
@@ -107,14 +87,12 @@ ion-tab-bar{
   border-radius: 50%;
   border: 1px solid #000000;
   --background: transparent;
-
 }
 
 .circulocentral{
   text-align: center;
   margin-left: 26px;
-  margin-right: 4px;
- 
+  margin-right: 4px; 
 }
 
 .circulo2{
@@ -124,6 +102,7 @@ ion-tab-bar{
   border: 1px solid #000000;
   --background: transparent;
 }
+
 .circulocentral2{
   text-align: center;
   margin-top: 20px;
