aba de configuração e report

--- a/src/pages/check.css
+++ b/src/pages/check.css
@@ -1,17 +1,103 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap');
 
 
 .toolbar {
     background-color: white;
+
+}
+.container {
+
+    height: 56px;
+
+    padding-bottom: 8px;
+
+    
+
+    display: flex;
+    flex-direction: row;        
+    justify-content: center;
+    align-items: center;
 }
 
+.container-logo {
+
+
+
+    width: 90px;
+    height: 32px;
+
+    margin: 0px;
+    margin-top: 4px;
+
+    display: flex;
+    flex-direction: row;
+
+}
+
+.img {
+
+    
+    width: 30px;
+    height: 30px;
+    
+    margin-top: 2px;
+    margin-right: 2px;
+     
+}
+
+
+.name-logo {
+ 
+    height: 48px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    box-sizing: border-box;
+   
+}
+
+.biotech-name {
+
+    margin-top: 5px;
+    margin-bottom: 1px;
+   
+    color: #6c6d6d;
+
+}
+
+.biotech-name strong {
+
+    font-weight: 900;
+
+}
+
+.biotech-name span {
+
+    font-weight: 400;
+
+}
+
+.biotech-name-consultoria {
+     
+    margin-top: -4px;
+    margin-left: 1px;
+
+    font-weight: 400;
+    font-size: 6px;
+
+    color: #939393;
+    letter-spacing: 1.5px;
+  
+}
 
 .check-title {
 
     box-sizing: border-box;
 
     margin-top: 8px;
-    margin-bottom: 20px;
+    margin-bottom: 4px;
     margin-left: 20px;
     
     display: flex;
@@ -20,10 +106,13 @@
 
 }
 
-
 .report-title {
-    font-weight: bold;
+
+    font-weight: 500;
+    font-size: 20px;
+
     color: #4f4f4f;
+
 }
 
 .date-title {
@@ -36,15 +125,22 @@
 
 .label {
 
-    font-weight: 400;
-    
+    height: 20px;
+
+    font-weight: 300;
+
+    margin-left: 4px!important;
+        
+}
+.label-text {
+    color: #4f4f4f;
 
 }
 
 .checkbox {
 
-    width: 20px;
-    height: 20px;
+    width: 16px;
+    height:16px;
 
    
     --checkmark-width: 2px;
@@ -54,34 +150,76 @@
     --background-checked: #4dbbff;
     --border-color-checked: #4dbbff;
 
-    --border-width: 1px;
-    --border-radius: 100%;
+    --border-width: 2px;
+    
 
     transition: 400ms;
+    margin-left: 12px;
     
-  }
-  
- 
-  .icon {
+}
 
-      color:white ;
 
-  }
+.icon-close {
 
-  .new-list {
-    display: flex;
-    align-items: baseline;
-    flex-direction: row; 
-    margin-left:22px;
-    margin-top: 12px;
-    color: #6c6d6d;
-   
-  }
-
-  .new-list-name {
-    margin-left: 36px;
     font-size: 16px;
-    font-weight: 400;
-    color: #6c6d6d;
+    font-weight: 700;
 
+    margin-right: 8px;
+    color: #4f4f4f;
+    
+}
+
+.button-add{
+
+    
+    margin:4px 10px 10px 10px ;
+
+    
+    
+}
+
+.button-add span {
+
+    font-size: 20px;
+
+    
+    margin-left: 6px;
+    
+}
+
+.button-add p {
+
+    margin-left: 35px;
+      
+    font-size: 14px;
+    
+    color: #6c6d6d; 
+
+    text-transform: initial;
+    
+}
+ 
+
+ 
+
+   
+
+
+
+
+  
+      
+      
+  
+  
+
+  
+
+  
+
+  
+
+  ion-toolbar {
+      display: flex;
+      align-items: center;
   }
